@@ -4,11 +4,12 @@ import lombok.Data;
 import lombok.EqualsAndHashCode;
 import org.techhouse.config.Globals;
 import org.techhouse.data.DbEntry;
-import org.techhouse.ejson.JsonArray;
-import org.techhouse.ejson.JsonObject;
+import org.techhouse.ejson.elements.JsonArray;
+import org.techhouse.ejson.elements.JsonObject;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @EqualsAndHashCode(callSuper = true)
 @Data
@@ -40,10 +41,11 @@ public class AdminDbEntry extends DbEntry {
     public static AdminDbEntry fromJsonObject(JsonObject object) {
         final var result = new AdminDbEntry();
         result.setData(object);
-        final var id = object.get(Globals.PK_FIELD).getAsString();
+        final var id = object.get(Globals.PK_FIELD).asJsonString().getValue();
         result.set_id(id);
-        final var collections = object.get(COLLECTIONS_FIELD_NAME).getAsJsonArray().asList()
-                .stream().map(element -> element.getAsJsonPrimitive().getAsString()).toList();
+        final var collections = object.get(COLLECTIONS_FIELD_NAME).asJsonArray().asList()
+                .stream().map(element -> element.asJsonString().getValue())
+                .collect(Collectors.toList());
         result.setCollections(collections);
         result.setDatabaseName(Globals.ADMIN_DB_NAME);
         result.setCollectionName(Globals.ADMIN_DATABASES_COLLECTION_NAME);
@@ -60,7 +62,10 @@ public class AdminDbEntry extends DbEntry {
     }
 
     @Override
-    public void setDatabaseName(String value) {}
+    public void setDatabaseName(String value) {
+    }
+
     @Override
-    public void setCollectionName(String value) {}
+    public void setCollectionName(String value) {
+    }
 }
